<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrFragment2"
    android:background="@color/backgroundBase">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="188dp"
        android:fontFamily="@font/montserrat_extrabold"
        android:text="@string/registr_2"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/registr_2_1"
        android:textAlignment="center"
        android:textColor="@color/textColorLightGray"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/editTextAge"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/montserrat_light"
        android:hint="@string/registr_2_2"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/textColorLightGray"
        android:textSize="24sp"
        android:maxLines="1"
        android:inputType="date"
        android:importantForAccessibility="yes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="MissingConstraints" />


    <Button
        android:id="@+id/buttonNext1"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/colorActiveFirst"
        android:text="@string/registr_1_2"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>