<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundBase">

    <!-- Similar to your original layout -->
    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/top_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/mens_first" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_bottom_shape" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="16dp">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auth_registration"
                android:fontFamily="@font/montserrat_bold"
                android:textSize="24sp"
                android:paddingEnd="16dp"
                android:textColor="@color/white"
                android:drawablePadding="8dp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auth_login"
                android:fontFamily="@font/montserrat_bold"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:drawablePadding="8dp" />
        </LinearLayout>


    </FrameLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout"
        app:boxStrokeColor="@color/colorActiveFirst"
        app:hintTextColor="@color/colorActiveFirst">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_light"
            android:textColor="@color/white"
            android:hint="@string/auth_registration_2"
            android:padding="12dp"
            android:textColorHint="@color/textColorLightGray"
            android:textSize="22sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEmail"
        app:boxStrokeColor="@color/colorActiveFirst"
        app:hintTextColor="@color/colorActiveFirst">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:fontFamily="@font/montserrat_light"
            android:hint="@string/auth_registration_3"
            android:padding="12dp"
            android:textColorHint="@color/textColorLightGray"
            android:textSize="22sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/buttonAuth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/colorActiveFirst"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/auth_login1"
        android:textSize="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
