<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundBase">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/top_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/mens_first" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_bottom_shape" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:fontFamily="@font/montserrat_extrabold"
            android:layout_gravity="center"
            android:paddingEnd="16dp"
            android:text="@string/auth_registration"
            android:textColor="@color/white"
            android:textSize="34sp" />
    </FrameLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutFullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout"
        app:boxStrokeColor="@color/colorActiveFirst"
        app:hintTextColor="@color/colorActiveFirst">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextFullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_light"
            android:hint="@string/auth_registration_1"
            android:padding="12dp"
            android:textColor="@color/white"
            android:textColorHint="@color/textColorLightGray"
            android:textSize="22sp"
            android:singleLine="true"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutFullname"
        app:boxStrokeColor="@color/colorActiveFirst"
        app:hintTextColor="@color/colorActiveFirst">

        <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_light"
        android:hint="@string/auth_registration_2"
            android:textColor="@color/white"
        android:padding="12dp"
        android:textColorHint="@color/textColorLightGray"
        android:textSize="22sp"
            android:singleLine="true"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutUsername"
        app:boxStrokeColor="@color/colorActiveFirst"
        app:hintTextColor="@color/colorActiveFirst">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_light"
            android:hint="@string/auth_registration_3"
            android:padding="12dp"
            android:textColor="@color/white"
            android:textColorHint="@color/textColorLightGray"
            android:textSize="22sp"
            android:singleLine="true"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="250dp"
        android:layout_height="56dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="68dp"
        android:backgroundTint="@color/colorActiveFirst"
        android:fontFamily="@font/montserrat_light"
        android:text="@string/auth_registration_4"
        android:textSize="24dp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/haveAccount"
        android:layout_width="164dp"
        android:layout_height="22dp"
        android:layout_marginBottom="16dp"
        android:background="#1c1c1e"
        android:fontFamily="@font/montserrat_thin"
        android:text="@string/hello_fragment3_3"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/textColorLightGray"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
